<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingBottom="@dimen/activity_vertical_margin"
              tools:context="com.easy2in.mysqlconnect.Register"
              android:background="#b3edff">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration_form"
        android:textAppearance="?android:textAppearanceLarge"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"/>

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:id="@+id/name"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"/>

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:id="@+id/new_user_name"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"/>

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:id="@+id/new_user_pass"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"/>

    <Button
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:onClick="userReg"/>

</LinearLayout>