<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:orientation="vertical"
              android:background="#b3edff"
              tools:context="com.example.vladislav.loginmysql.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_form"
        android:textAppearance="?android:textAppearanceLarge"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"/>

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:id="@+id/username"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"/>

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:id="@+id/password"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"/>


    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:onClick="userLogin"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_now"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:onClick="userReg"/>
</LinearLayout>
